venndb-usage/tests/fails/key_any.stderr
error: Invalid field-level `venndb` attribute
       Cannot have both `key` and `any`
 --> tests/fails/key_any.rs:5:19
  |
5 |     #[venndb(key, any)]
  |                   ^^^
